tests/rosetta/out/C/catamorphism.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:07Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:07Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int _lambda0(int a, int b) { return add(a, b); }

int _lambda1(int a, int b) { return add(a, b); }

int _lambda2(int a, int b) { return sub(a, b); }

int _lambda3(int a, int b) { return sub(a, b); }

int _lambda4(int a, int b) { return mul(a, b); }

int _lambda5(int a, int b) { return mul(a, b); }

int add(int a, int b) { return a + b; }

int sub(int a, int b) { return a - b; }

int mul(int a, int b) { return a * b; }

int fold(int (*)(int, int) f, list_int xs) {
  int r = xs.data[0];
  int i = 1;
  while (i < xs.len) {
    r = f(r, xs.data[i]);
    i = i + 1;
  }
  return r;
}

int _mochi_main() {
  list_int n = list_int_create(5);
  n.data[0] = 1;
  n.data[1] = 2;
  n.data[2] = 3;
  n.data[3] = 4;
  n.data[4] = 5;
  list_int tmp1 = list_int_create(5);
  tmp1.data[0] = 1;
  tmp1.data[1] = 2;
  tmp1.data[2] = 3;
  tmp1.data[3] = 4;
  tmp1.data[4] = 5;
  list_int tmp2 = list_int_create(5);
  tmp2.data[0] = 1;
  tmp2.data[1] = 2;
  tmp2.data[2] = 3;
  tmp2.data[3] = 4;
  tmp2.data[4] = 5;
  printf("%d\n", fold(_lambda1, tmp2));
  list_int tmp3 = list_int_create(5);
  tmp3.data[0] = 1;
  tmp3.data[1] = 2;
  tmp3.data[2] = 3;
  tmp3.data[3] = 4;
  tmp3.data[4] = 5;
  list_int tmp4 = list_int_create(5);
  tmp4.data[0] = 1;
  tmp4.data[1] = 2;
  tmp4.data[2] = 3;
  tmp4.data[3] = 4;
  tmp4.data[4] = 5;
  printf("%d\n", fold(_lambda3, tmp4));
  list_int tmp5 = list_int_create(5);
  tmp5.data[0] = 1;
  tmp5.data[1] = 2;
  tmp5.data[2] = 3;
  tmp5.data[3] = 4;
  tmp5.data[4] = 5;
  list_int tmp6 = list_int_create(5);
  tmp6.data[0] = 1;
  tmp6.data[1] = 2;
  tmp6.data[2] = 3;
  tmp6.data[3] = 4;
  tmp6.data[4] = 5;
  printf("%d\n", fold(_lambda5, tmp6));
  return 0;
}
int main() { return _mochi_main(); }
